pgsql/pgBench.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pgbench
  namespace: pg-test-app
spec:
  containers:
    - name: pgbench
      image: postgres
